2008-09-26  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.c: 1.7.1 -> 1.8.0.

	* NEWS: add 1.8.0 entry.

	* test/test_context.rb (ContextTest#test_font_face): remove
	needless test.

	* src/rb_cairo_font_face.c: don't define #set_cluster_flags.

	* src/rb_cairo_context.c: support cairo 1.8.0.

2008-09-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/, test/: support cairo 1.7.6.

2008-09-06  Kouhei Sutou  <kou@cozmixng.org>

	* README: add Yusue ENDOH to Thanks list.

	* src/rb_cairo_context.c: re-support cairo 1.2.x.
	Reported by Yusuke ENDOH. Thanks!!!

2008-08-17  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: fix a typo.

	* test/.cvsignore: add.

	* src/rb_cairo.c (Cairo::BINDINGS_VERSION): 1.7.0 -> 1.7.1.

	* Rakefile: exclude .test-result.

	* NEWS: add 1.7.0 entry. (cairo 1.7.4 is supported)

	* src/, test/: add missing version checks.

	* src/rb_cairo_font_face.c
	(cr_user_font_face_text_to_glyphs_func): set num_glyphs to -1 if
	callback isn't found.

	* src/rb_cairo_private.c (rb_cairo__glyphs_from_ruby_object)
	(rb_cairo__text_clusters_from_ruby_object): set -1 to *num_XXX
	instead of 0.

	* src/rb_cairo_text_extents.c: add Cairo::TextExtents#initialize
	and setters.

	* test/test_text_extents.rb: add.

	* src/rb_cairo_font_extents.c: add Cairo::FontExtents#initialize
	and setters.

	* test/test_font_extents.rb: add.

	* src/rb_cairo_font_face.c: add
	Cairo::UserFontFace::TextToGlyphsData#need_backward?.

	* test/test_text_to_glyphs_data.rb: add tests for
	Cairo::UserFontFace::TextToGlyphsData.

	* test/test_font_face.rb
	(FontFaceTest#test_toy_font_face_new_with_invalid_family_name):
	add a test for creating Cairo::ToyFontFace with invalid family
	name.
	(FontFaceTest#test_toy_font_face_new): add a test for creating
	Cairo::ToyFontFace with nil family name.

	* src/rb_cairo_font_face.c (cr_toy_font_face_initialize): accept nil.

	* src/rb_cairo_context.c (cr_select_font_face): make family optional.

	* test/test_context.rb